# finRAG

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  server.py
.github/workflows/: ci.yml
app/: cache.py  generator.py  history.py  refiner.py  retrieval.py  verifier.py
eval/: dataset.json  evaluation_summary.md  golden_dataset.json  results.md  run_eval.py
frontend/: app.js  index.html  manage.html  manage.js  script.js  style.css
notebooks/: retrieval_comparison.ipynb
prompts/: generation.py  query_refinement.py
scripts/: ask.py  build_index.py  generate_charts.py  generate_golden_dataset.py  ingest.py  ingest_eurlex.py  seed.py  test_mcp.py
