[project]
name = "finrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "datasets>=5.0.0",
    "fastapi>=0.138.0",
    "flashrank>=0.2.10",
    "jupyter>=1.1.1",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.4",
    "langchain-openai>=1.3.2",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
